@@ -1,6 +1,7 @@
 0.1.6 (unreleased)
 =====
 * Added branch_and_bound_opt.
+* Added get_row_primal and get_row_dual (thanks Sean McLaughlin).
 * Protect values used in blocking sections.
 
 0.1.5 (2006-07-25)
